<resources>
    <string name="app_name">Erreius Codigos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_registrarme">Registrarme como suscriptor</string>
    <string name="menu_activar">Activar Código</string>
    <string name="menu_terminos">Términos y condiciones \n de uso</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="menu_contactenos">Contactanos</string>
</resources>