<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registrarme"
            android:icon="@drawable/ic_regis"
            android:title="@string/menu_registrarme" />
        <item
            android:id="@+id/nav_activar"
            android:icon="@drawable/ic_menubook"
            android:title="@string/menu_activar" />
        <item
            android:id="@+id/nav_terminos"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_terminos" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_close"
            android:title="@string/menu_cerrar" />
        <item
            android:id="@+id/nav_contactanos"
            android:icon="@drawable/ic_support"
            android:title="@string/menu_contactenos" />
    </group>
</menu>