<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.erreius.developer.codigos.views.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_registrarme"
        android:name="com.erreius.developer.codigos.views.RegisterFragment"
        android:label="@string/menu_registrarme"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_activar"
        android:name="com.erreius.developer.codigos.views.ActivarFragment"
        android:label="@string/menu_activar"
        tools:layout="@layout/fragment_activar" />

    <fragment
        android:id="@+id/nav_terminos"
        android:name="com.erreius.developer.codigos.views.TermsAndConditionsFragment"
        android:label="@string/menu_terminos"
        tools:layout="@layout/fragment_terms" />

    <fragment
        android:id="@+id/nav_contactanos"
        android:name="com.erreius.developer.codigos.views.ContactFragment"
        android:label="@string/menu_contactenos"
        tools:layout="@layout/fragment_contact" />
</navigation>